<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.AddApplicantActivity">

    <RelativeLayout
        android:id="@+id/applicantActionBarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        >

        <ImageView
            android:id="@+id/backImagevIew"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/back"/>

        <TextView
            android:layout_toEndOf="@+id/backImagevIew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_applicant"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backImagevIew" />




    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/applicantActionBarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_text_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


        <android.support.v7.widget.CardView
            android:id="@+id/applicantCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userFirstNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/firstNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_first_name"
                        android:maxLength="30"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNameInputLayout"
                    android:layout_below="@+id/userFirstNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"

                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/lastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_last_name"
                        android:textSize="16sp"
                        android:maxLength="30"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_below="@+id/lastNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_your_email"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/loanAmountInputLayout"
                    android:layout_below="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/loanAmountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_your_loan_amount"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/panInputLayout"
                    android:layout_below="@+id/loanAmountInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/panCardEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_your_pan_card"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/aadharInputLayout"
                    android:layout_below="@+id/panInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/aadharCardEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_your_aadhar_card"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/voterIdInputLayout"
                    android:layout_below="@+id/aadharInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#869Ac3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/voterCardEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#40E7E7E7"
                        android:hint="@string/enter_your_voter_card"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"

                        />

                </android.support.design.widget.TextInputLayout>



            </RelativeLayout>






        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submitButton"
            android:layout_below="@+id/applicantCardView"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"/>

        </RelativeLayout>



    </android.support.v4.widget.NestedScrollView>





</RelativeLayout>